--- a/TP integrador JS/css/style.css
+++ b/TP integrador JS/css/style.css
@@ -10,10 +10,7 @@
     height: 100% !important;
     width:  100% !important;
 }
-.footerColor{
-    background-color: rgb(0, 52, 59);
-    padding-left: 100px;
-    padding-right: 100px;
+.footerColor{background-color: rgb(9, 71, 87);}
 }
 .carousel-item{
     position: relative;
@@ -22,3 +19,8 @@
     right: 5%;
     left: 50%;
 }
+#pagar {background-color: rgb(161, 199, 255);
+    color:rgb(11, 11, 139)}
+    
+.botones{background-color:rgb(158, 208, 74 );
+    border:none}
